[gd_scene load_steps=6 format=3 uid="uid://cjgjbbkox47x1"]

[ext_resource type="Texture2D" uid="uid://k068syh3gu1t" path="res://Sprites/Items/circle_light.png" id="1_1syyk"]
[ext_resource type="Texture2D" uid="uid://cuev7k3v8m77n" path="res://Sprites/Items/Bottle_blue.png" id="1_s2n4c"]
[ext_resource type="Script" path="res://Scene/Items/bottle_item_start.gd" id="2_71t7k"]
[ext_resource type="AudioStream" uid="uid://br2o532trfcqn" path="res://Sounds/Glass.mp3" id="4_oic34"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csop6"]
size = Vector2(207, 61.5)

[node name="bottle_item_start" type="Sprite2D"]
texture = ExtResource("1_s2n4c")
script = ExtResource("2_71t7k")
item_sprite = ExtResource("1_s2n4c")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
position = Vector2(-124, 84)
shape = SubResource("RectangleShape2D_csop6")
debug_color = Color(0.572549, 0.529412, 0.462745, 0.419608)

[node name="CircleLight" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.937255, 0.603922, 0, 0.207843)
show_behind_parent = true
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_1syyk")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_oic34")
volume_db = 10.0
bus = &"Sounds"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
